--- a/src/global.css
+++ b/src/global.css
@@ -20,3 +20,15 @@
   z-index: 0;
   scroll-behavior: smooth;
 }
+
+@media screen and (min-width: 1152px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 3200px) {
+  body {
+    font-size: 32px;
+  }
+}
